--- a/FW/Watering control.ioc
+++ b/FW/Watering control.ioc
@@ -212,35 +212,38 @@ Mcu.PinsNb=42
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RCTx
-MxCube.Version=6.5.0
-MxDb.Version=DB.6.0.50
-NVIC.ADC1_2_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.DMA1_Channel1_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel2_IRQn=true\:10\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel3_IRQn=true\:10\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel4_IRQn=true\:10\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel5_IRQn=true\:10\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel6_IRQn=true\:10\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel7_IRQn=true\:10\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA2_Channel3_IRQn=true\:10\:0\:true\:false\:true\:false\:true\:true
+MxCube.Version=6.6.1
+MxDb.Version=DB.6.0.60
+NVIC.ADC1_2_IRQn=true\:14\:0\:true\:false\:true\:true\:true\:true
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Channel1_IRQn=true\:14\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel2_IRQn=true\:8\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel3_IRQn=true\:5\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel4_IRQn=true\:8\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel5_IRQn=true\:5\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel6_IRQn=true\:6\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel7_IRQn=true\:9\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA2_Channel3_IRQn=true\:7\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA2_Channel4_5_IRQn=true\:10\:0\:true\:false\:true\:false\:true\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI3_IRQn=true\:13\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.I2C1_ER_IRQn=true\:12\:0\:true\:false\:true\:true\:true\:true
 NVIC.I2C1_EV_IRQn=true\:11\:0\:true\:false\:true\:true\:true\:true
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PVD_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.SysTick_IRQn=true\:14\:0\:true\:false\:true\:false\:true\:true
-NVIC.UART4_IRQn=true\:10\:0\:true\:false\:true\:true\:true\:true
-NVIC.UART5_IRQn=true\:9\:0\:true\:false\:true\:true\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.SysTick_IRQn=true\:15\:0\:true\:false\:true\:false\:true\:false
+NVIC.UART4_IRQn=true\:9\:0\:true\:false\:true\:true\:true\:true
+NVIC.UART5_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
+NVIC.USART1_IRQn=true\:8\:0\:true\:false\:true\:true\:true\:true
+NVIC.USART2_IRQn=true\:10\:0\:true\:false\:true\:true\:true\:true
+NVIC.USART3_IRQn=true\:8\:0\:true\:false\:true\:true\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA10.GPIOParameters=GPIO_PuPd
 PA10.GPIO_PuPd=GPIO_PULLUP
 PA10.Mode=Asynchronous
