Fixed day time correction, 1PPS blinking

--- a/FW/Watering control.ioc
+++ b/FW/Watering control.ioc
@@ -423,8 +423,8 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=6000000
-RTC.AsynchPrediv=RTC_AUTO_1_SECOND
-RTC.AutoPrediv=RTC_AUTO_1_SECOND
+RTC.AsynchPrediv=32767
+RTC.AutoPrediv=0
 RTC.Date=1
 RTC.Format=RTC_FORMAT_BIN
 RTC.Hours=0
