--- a/FW/Watering control.ioc
+++ b/FW/Watering control.ioc
@@ -199,16 +199,17 @@ Mcu.Pin35=PB9
 Mcu.Pin36=VP_CRC_VS_CRC
 Mcu.Pin37=VP_IWDG_VS_IWDG
 Mcu.Pin38=VP_RTC_VS_RTC_Activate
-Mcu.Pin39=VP_SYS_VS_Systick
+Mcu.Pin39=VP_RTC_VS_RTC_Calendar
 Mcu.Pin4=PC0
-Mcu.Pin40=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin41=VP_TIM4_VS_no_output4
+Mcu.Pin40=VP_SYS_VS_Systick
+Mcu.Pin41=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin42=VP_TIM4_VS_no_output4
 Mcu.Pin5=PC1
 Mcu.Pin6=PC2
 Mcu.Pin7=PC3
 Mcu.Pin8=PA2
 Mcu.Pin9=PA3
-Mcu.PinsNb=42
+Mcu.PinsNb=43
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RCTx
@@ -423,9 +424,9 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=6000000
-RTC.AsynchPrediv=32767
+RTC.AsynchPrediv=32763
 RTC.AutoPrediv=0
-RTC.Date=1
+RTC.Date=29
 RTC.Format=RTC_FORMAT_BIN
 RTC.Hours=0
 RTC.IPParameters=Format,AutoPrediv,AsynchPrediv,OutPut,Hours,Minutes,Seconds,WeekDay,Month,Date,Year
@@ -433,8 +434,8 @@ RTC.Minutes=0
 RTC.Month=RTC_MONTH_SEPTEMBER
 RTC.OutPut=RTC_OUTPUTSOURCE_ALARM
 RTC.Seconds=0
-RTC.WeekDay=RTC_WEEKDAY_TUESDAY
-RTC.Year=20
+RTC.WeekDay=RTC_WEEKDAY_THURSDAY
+RTC.Year=22
 SH.ADCx_IN10.0=ADC2_IN10,IN10
 SH.ADCx_IN10.ConfNb=1
 SH.ADCx_IN11.0=ADC1_IN11,IN11
@@ -497,6 +498,8 @@ VP_IWDG_VS_IWDG.Mode=IWDG_Activate
 VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
+VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
