--- a/FW/Watering control.ioc
+++ b/FW/Watering control.ioc
@@ -39,6 +39,9 @@ ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_28CYCLES_5
 ADC2.ScanConvMode=ADC_SCAN_DISABLE
 ADC2.WatchdogChannel=ADC_CHANNEL_10
 ADC2.WatchdogMode=ADC_ANALOGWATCHDOG_SINGLE_REG
+CAD.formats=
+CAD.pinconfig=
+CAD.provider=
 Dma.ADC1.2.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.2.Instance=DMA1_Channel1
 Dma.ADC1.2.MemDataAlignment=DMA_MDATAALIGN_WORD
@@ -212,8 +215,8 @@ Mcu.PinsNb=42
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RCTx
-MxCube.Version=6.6.1
-MxDb.Version=DB.6.0.60
+MxCube.Version=6.7.0
+MxDb.Version=DB.6.0.70
 NVIC.ADC1_2_IRQn=true\:14\:0\:true\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Channel1_IRQn=true\:14\:0\:true\:false\:true\:false\:true\:true
