Bug fixed, tested

--- a/FW/Watering control.ioc
+++ b/FW/Watering control.ioc
@@ -211,8 +211,8 @@ Mcu.PinsNb=42
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RCTx
-MxCube.Version=6.11.0
-MxDb.Version=DB.6.0.110
+MxCube.Version=6.12.0
+MxDb.Version=DB.6.0.120
 NVIC.ADC1_2_IRQn=true\:14\:0\:true\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Channel1_IRQn=true\:14\:0\:true\:false\:true\:false\:true\:true
@@ -445,9 +445,10 @@ SH.GPXTI3.0=GPIO_EXTI3
 SH.GPXTI3.ConfNb=1
 TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM4.Channel-Output\ Compare4\ No\ Output=TIM_CHANNEL_4
+TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM4.ClockDivision=TIM_CLOCKDIVISION_DIV1
 TIM4.CounterMode=TIM_COUNTERMODE_UP
-TIM4.IPParameters=Prescaler,CounterMode,Period,ClockDivision,AutoReloadPreload,TIM_MasterSlaveMode,TIM_MasterOutputTrigger,OCMode_4,Pulse-Output Compare4 No Output,OC4Preload,OCPolarity_4,Channel-Output Compare4 No Output
+TIM4.IPParameters=Prescaler,CounterMode,Period,ClockDivision,AutoReloadPreload,TIM_MasterSlaveMode,TIM_MasterOutputTrigger,OCMode_4,Pulse-Output Compare4 No Output,OC4Preload,OCPolarity_4,Channel-Output Compare4 No Output,Channel-PWM Generation1 CH1
 TIM4.OC4Preload=DISABLE
 TIM4.OCMode_4=TIM_OCMODE_ACTIVE
 TIM4.OCPolarity_4=TIM_OCPOLARITY_HIGH
